@@ -1,3 +1,3 @@
 @echo off
 set server="urban-spork-server"
-java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --illegal-access=warn -Dio.netty.tryReflectionSetAccessible=true -Dio.netty.leakDetectionLevel=SIMPLE -Dio.netty.leakDetection.targetRecords=1 -XX:MaxDirectMemorySize=16m -Xms64m -Xmx256m -jar %server%.jar
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true -Dio.netty.leakDetectionLevel=SIMPLE -Dio.netty.leakDetection.targetRecords=1 -XX:MaxDirectMemorySize=16m -Xms64m -Xmx256m -jar %server%.jar
